--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,6 +1,8 @@
-username=username
-password=passed
+username=wl
+password=wl
 host=localhost
 port=5672
-queuename=rabbit-spring-queue
+queuename=ha-rabbit-spring-queue-demo
 poolsize=5
+routing.key=ha-rabbit-spring-queue-demo
+exchange=ha-rabbit-spring-exchange
